--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Courier New', sans-serif;
   margin: 0;
   background-color: #fff9f9;
   color: #333;
