--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ footer {
   border-top: 1px solid #f8cdd9;
 }
 
-.profile-pic {
+.about-photo {
   width: 150px;
   height: 150px;
   object-fit: cover;
